fix so it's actually x api key

--- a/extract.mdx
+++ b/extract.mdx
@@ -11,9 +11,9 @@ Provide Cardinal with the schema you want to extract. We’ll return that schema
 
 ### Endpoint
 
-**POST** `https://api.trycardinal.ai/extract`  
+**POST** `https://api.trycardinal.ai/split`  
 **Content-Type:** `multipart/form-data`  
-**Auth:** `Authorization: Bearer <API_KEY>`
+**Auth:** `X-API-KEY: <API_KEY>`
 
 > You may provide **either** `file` **or** `fileUrl`.
 
