--- a/markdown.mdx
+++ b/markdown.mdx
@@ -25,9 +25,9 @@ This Markdown output contains accurate representation of:
 
 ### Endpoint
 
-**POST** `https://api.trycardinal.ai/markdown`  
+**POST** `https://api.trycardinal.ai/split`  
 **Content-Type:** `multipart/form-data`  
-**Auth:** `Authorization: Bearer <API_KEY>`
+**Auth:** `X-API-KEY: <API_KEY>`
 
 > You may provide **either** `file` **or** `fileUrl`.
 
