--- a/split.mdx
+++ b/split.mdx
@@ -13,7 +13,7 @@ Send an array of descriptions for what you want (e.g., “invoices”, “contra
 
 **POST** `https://api.trycardinal.ai/split`  
 **Content-Type:** `multipart/form-data`  
-**Auth:** `Authorization: Bearer <API_KEY>`
+**Auth:** `X-API-KEY: <API_KEY>`
 
 > You may provide **either** `file` **or** `fileUrl`.
 
