--- a/rag.mdx
+++ b/rag.mdx
@@ -14,9 +14,9 @@ Get precise chunks for your retrieval and embedded workflows.
 
 ### Endpoint
 
-**POST** `https://api.trycardinal.ai/rag`  
+**POST** `https://api.trycardinal.ai/split`  
 **Content-Type:** `multipart/form-data`  
-**Auth:** `Authorization: Bearer <API_KEY>`
+**Auth:** `X-API-KEY: <API_KEY>`
 
 > You may provide **either** `file` **or** `fileUrl`.
 
