--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,58 +4,58 @@ description: "Product updates and announcements"
 rss: true
 ---
 
-<Update label="October 18, 2025" description="v0.1.13">
+<Update label="October 18, 2025">
   Launched the Cardinal Benchmark — public dataset and evaluation scripts for OCR and layout models.
 </Update>
 
-<Update label="October 14, 2025" description="v0.1.12">
+<Update label="October 14, 2025">
   Released OCR Showdown — benchmarked Cardinal against industry models across 200+ documents.
 </Update>
 
-<Update label="October 10, 2025" description="v0.1.11">
+<Update label="October 10, 2025">
   Published “How We Work Under the Hood” — new blog post explaining our document intelligence pipeline.
 </Update>
 
-<Update label="October 7, 2025" description="v0.1.10">
+<Update label="October 7, 2025">
   Launched <code>/compare</code> endpoint — compare multiple extractions for accuracy benchmarking.
 </Update>
 
-<Update label="October 3, 2025" description="v0.1.9">
+<Update label="October 3, 2025">
   Added figure digitization — automatically converts embedded charts and figures into structured data.
 </Update>
 
-<Update label="September 29, 2025" description="v0.1.8">
+<Update label="September 29, 2025">
   Added dense PDF parsing — improved OCR accuracy for heavy-layout and scanned documents.
 </Update>
 
-<Update label="September 25, 2025" description="v0.1.7">
+<Update label="September 25, 2025">
   Added barcode and signature detection 
 </Update>
 
-<Update label="September 20, 2025" description="v0.1.6">
+<Update label="September 20, 2025">
   Added image and image metadata detection 
 </Update>
 
-<Update label="September 16, 2025" description="v0.1.5">
+<Update label="September 16, 2025">
   Added image file support — platform now accepts both PDFs and image uploads.
 </Update>
 
-<Update label="September 13, 2025" description="v0.1.4">
+<Update label="September 13, 2025">
   Launched <code>/rag</code> endpoint with bounding boxes — generate RAG-ready data with spatial awareness.
 </Update>
 
-<Update label="September 9, 2025" description="v0.1.3">
+<Update label="September 9, 2025">
   Launched <code>/split</code> endpoint — enables intelligent document splitting by sections and types.
 </Update>
 
-<Update label="September 6, 2025" description="v0.1.2">
+<Update label="September 6, 2025">
   Launched <code>/extract</code> (fast) endpoint — optimized version for faster structured extraction.
 </Update>
 
-<Update label="September 3, 2025" description="v0.1.1">
+<Update label="September 3, 2025">
   Launched <code>/extract</code> endpoint (slow version) — first iteration of structured data extraction.
 </Update>
 
-<Update label="September 1, 2025" description="v0.1.0">
+<Update label="September 1, 2025">
   Launched <code>/markdown</code> endpoint — converts documents into clean Markdown with layout preservation.
 </Update>
