--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,6 +4,12 @@ description: "Product updates and announcements"
 rss: true
 ---
 
+<Update label="October 7, 2025">
+  Added <code>end_page</code> as a parameter in the API.<br />
+  Improved infrastructure significantly — memory handling is now much more efficient, allowing far more parallel runs.<br />
+  Added <code>ephemeral</code> flag to prevent storage of images, signatures, barcodes, etc.
+</Update>
+
 <Update label="October 18, 2025">
   Launched the Cardinal Benchmark — public dataset and evaluation scripts for OCR and layout models.
 </Update>
